@@ -530,3 +530,7 @@
 
         * fix wrong size calc in naviframe when an item have setted
           tittle_visible_set to false.
+
+2012-09-24 Flavio Ceolin
+
+        * elementary_codegen: Adding support for box and table.
